# ser_raw

./: .rustfmt.toml  Cargo.toml  README.md  calc_block_sizes.js  changelog.md
ser_raw/: Cargo.toml  README.md
ser_raw/src/: aligned_serializer.rs  aligned_vec.rs  base.rs  lib.rs  macros.rs  other.rs  pos.rs  primitives.rs  ptrs.rs  serialize.rs  serializer.rs  unaligned.rs  unaligned_serializer.rs  util.rs
ser_raw/src/impls/: other.rs  primitives.rs  ptrs.rs
ser_raw/src/serialize_impls/: bigint.rs  mod.rs  multiples.rs  other.rs  primitives.rs  ptrs.rs
ser_raw/src/serializer_impls/: aligned.rs  complete.rs  mod.rs  rel_ptr.rs  unaligned.rs
ser_raw/src/serializer_traits/: complete.rs  mod.rs  pos_tracking.rs  ptr.rs  ptr_offset.rs  ptr_writing.rs  rel_ptr.rs  tracking.rs  writable.rs
ser_raw/src/serializers/: aligned.rs  complete.rs  mod.rs  ptr.rs  ptr_offset.rs  pure_copy.rs  rel_ptr.rs  tracking.rs  unaligned.rs
ser_raw/src/storage/: aligned.rs  aligned_blocks.rs  aligned_byte_vec.rs  aligned_bytes.rs  aligned_vec.rs  mod.rs  unaligned.rs
ser_raw/tests/: aligned.rs  complete.rs  ptr_offset.rs  pure_copy.rs  rel_ptr.rs  unaligned.rs
ser_raw/tests/common/: minecraft_data.rs  mod.rs
ser_raw_derive/: Cargo.toml  README.md
ser_raw_derive/src/: enums.rs  lib.rs  structs.rs
ser_raw_derive_serializer/: Cargo.toml  README.md
ser_raw_derive_serializer/src/: common.rs  lib.rs
ser_raw_derive_serializer/src/ser_types/: complete.rs  mod.rs  pos_tracking.rs  ptr_offset.rs  pure_copy.rs  rel_ptr.rs  tracking.rs
