[package]
name = "ser_raw"
version = "0.0.1"
edition = "2021"

[lib]

[dependencies]
ser_raw_derive = { path = "../ser_raw_derive", optional = true }

[dev-dependencies]
num-bigint = "0.4.3" # Required for doctests
rand = "0.8.5"
rand_pcg = "0.3.1"

[features]
default = ["derive"]
derive = ["dep:ser_raw_derive"]
