[package]
name = "ser_raw"
version = "0.1.0"
edition = "2021"
authors = ["overlookmotel"]
description = "Simple and fast serializer"
repository = "https://github.com/overlookmotel/ser_raw"
license = "MIT"

[lib]

[dependencies]
ser_raw_derive = { version = "0.1.0", path = "../ser_raw_derive", optional = true }
ser_raw_derive_serializer = { version = "0.1.0", path = "../ser_raw_derive_serializer" }

[dev-dependencies]
num-bigint = "0.4.3" # Required for doctests
rand = "0.8.5"
rand_pcg = "0.3.1"

[features]
default = ["derive"]
derive = ["dep:ser_raw_derive"]
