[package]
name = "ser_raw_derive"
version = "0.0.1"
edition = "2021"
authors = ["overlookmotel"]
description = "Derive macro for ser_raw serializer"
repository = "https://github.com/overlookmotel/ser_raw"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["extra-traits"] }
quote = "1.0"
